pequeñas modificaciones en card skills y footer

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </section>
     <footer class="footer">
-        footer
+        footer con los datos y form de contacto
     </footer>
 </body>
 </html>
