agregado alert js para prueba

--- a/index.html
+++ b/index.html
@@ -95,5 +95,7 @@
     <footer class="footer">
         footer con los datos y form de contacto
     </footer>
+    <link">
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
